@@ -1,10 +1,10 @@
-# $Id: config.rb,v 1.116 2006-08-04 15:10:08 fdiary Exp $
+# $Id: config.rb,v 1.117 2006-08-07 01:57:11 fdiary Exp $
 # Copyright (C) 2004-2005 Kazuhiko <kazuhiko@fdiary.net>
 #
 # TADA Tadashi <sho@spc.gr.jp> holds the copyright of Config class.
 
 HIKI_VERSION  = '0.8.6'
-HIKI_RELEASE_DATE = '2006-08-05'
+HIKI_RELEASE_DATE = '2006-08-07'
 
 require 'cgi'
 require 'hiki/command'
